feat: add languages selector

--- a/src/pages/pages.scss
+++ b/src/pages/pages.scss
@@ -63,6 +63,7 @@ font-size: 2rem;
 	max-width: 1200px; //паддинги считает почему-то в эту величину потом пофиксить
 	padding: 0 10px;
 	margin: 0 auto;
+	margin-top: 10px;
 }
 
 .serch-wrapper{
