--- a/src/pages/pages.scss
+++ b/src/pages/pages.scss
@@ -1,3 +1,5 @@
+@import "~react-image-gallery/styles/scss/image-gallery.scss";
+
 a {
   text-decoration-skip-ink: auto;   // ссылки в хедере 
 	text-decoration:none;
@@ -167,8 +169,9 @@ font-size: 2rem;
 	.country-media-wrapper{
 		margin-top: 10px;
 		display: flex;
-		justify-content: space-between;
+		justify-content: space-around;
 		.country-photo-wrapper{
+			max-width: 45%;
 			display: flex;
 			flex-direction: column;
 			justify-content: space-between;
@@ -176,8 +179,15 @@ font-size: 2rem;
 		}
 	}
 }
-
+.photo-wrapper{
+max-width: 100%;
+}
 .video-wrapper{
+	width: 45%;
+	display: flex;
+	align-items: center;
+	//height: 40px;
+	//background-color: blueviolet;
 	border: 1px solid black;
 }
 .reaction-wrapper{
