--- a/src/pages/pages.scss
+++ b/src/pages/pages.scss
@@ -215,3 +215,11 @@ max-width: 100%;
 		}
 	}
 }
+.currency-wrapper{
+	background-color: rgb(148, 222, 135);
+	display: flex;
+	flex-direction: column;
+	.currency-rate{
+		margin-right: 5px;
+	}
+}
