--- a/src/pages/pages.scss
+++ b/src/pages/pages.scss
@@ -145,6 +145,7 @@ a {
         height: 384px;
         border: 1px solid black;
         margin: 5px;
+				background-color: rgb(13, 211, 230);
     }
     .country-about {
         margin-left: 10px;
@@ -170,12 +171,13 @@ a {
         margin-top: 10px;
         display: flex;
         justify-content: space-around;
-        .country-photo-wrapper {
+        .country-gallery-wrapper {
             max-width: 45%;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            border: 1px solid black;
+            border: 1px solid blue;
+						
         }
     }
 }
@@ -221,4 +223,7 @@ a {
     .currency-rate {
         margin-right: 5px;
     }
+}
+.time-wrapper{
+	background-color: #fff;
 }
