faet: change gallery style

--- a/src/pages/pages.scss
+++ b/src/pages/pages.scss
@@ -513,7 +513,7 @@ body {
             padding: 10px;
             width: 100%;
             .image-gallery-description {
-                display: none;
+                // display: none;
             }
         }
         // video & map
