--- a/src/pages/pages.scss
+++ b/src/pages/pages.scss
@@ -330,13 +330,25 @@ nav {
     border: 1px solid red;
 }
 .map-wrapper {
+    position: relative;
     margin: 0 auto;
     margin-top: 10px;
     width: 700px;
     height: 400px;
     border: 1px solid white;
 }
-
+.map-container {
+    width: 100%;
+    height: 100%;
+}
+.map-fullscr-button {
+    color: #fff;
+    background-color: rgba(255, 255, 255, 0);
+    border: none;
+    position: absolute;
+    margin-top: -15px;
+    margin-left: 245px;
+}
 .weather-wrapper {
     background-color: burlywood;
     display: flex;
