--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,8 @@
 .App {
-    height: 100vh;
+    min-height: 100vh;
+    max-width: 1200px;
+    margin: 0 auto;
     text-align: center;
+    background-color: rgb(48, 48, 48);
+    transition: all 0.4s;
 }
