fix: transition map-wrapper remove

--- a/src/pages/pages.scss
+++ b/src/pages/pages.scss
@@ -639,7 +639,7 @@ body {
                 align-items: center;
                 justify-content: center;
                 background-color: $colorWidjets;
-                transition: all 0.2s;
+                // transition: all 0.2s;
                 cursor: pointer;
                 position: relative;
                 z-index: 2;
