--- a/src/pages/pages.scss
+++ b/src/pages/pages.scss
@@ -635,6 +635,8 @@ body {
             width: 100%;
             margin: 50px 0;
             .video-wrapper {
+                width: 50%;
+                height: 300px;
                 display: flex;
                 transition: all 0.2s;
                 cursor: pointer;
