--- a/src/pages/pages.scss
+++ b/src/pages/pages.scss
@@ -633,8 +633,8 @@ body {
                 box-shadow: 0 0 10px $colorHover;
             }
             .map-wrapper {
-                width: 300px;
-                height: 150px;
+                width: 45%;
+                height: 300px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -642,6 +642,11 @@ body {
                 // transition: all 0.2s;
                 cursor: pointer;
                 position: relative;
+                z-index: 2;
+            }
+            .map-wrapper1 {
+                width: 100%;
+                height: 100%;
                 z-index: 2;
             }
             .map-wrapper:hover {
