--- a/src/pages/pages.scss
+++ b/src/pages/pages.scss
@@ -62,6 +62,38 @@ body {
             margin-bottom: 10px;
             cursor: default;
         }
+        .auth-file-wrapper {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 40px;
+            //justify-content: center;
+            .auth-file-placeholder {
+                position: absolute;
+                padding: 2px 4px;
+                border-radius: 5px;
+                background-color: #fff;
+                color: grey;
+                width: 216px;
+                font-size: 18px;
+                line-height: 21px;
+                top: 0;
+                left: 0;
+                text-align: left;
+            }
+            .auth-file {
+                opacity: 0;
+                position: absolute;
+                z-index: 10;
+                top: 0;
+                left: 0;
+                ::after {
+                    content: '→';
+                    display: block;
+                }
+            }
+        }
+
         .auth-buttons-wrapper {
             margin-top: 10px;
             .auth-button {
