feat: change style

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,6 @@
     max-width: 1200px;
     margin: 0 auto;
     text-align: center;
-    background-color: rgb(48, 48, 48);
+    background-color: transparent;
     transition: all 0.4s;
 }
